[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
description = "A utility for generating AviSynth scripts"
documentation = "https://github.com/shssoichiro/avsser"
homepage = "https://github.com/shssoichiro/avsser"
license = "MIT"
name = "avsser"
readme = "README.md"
repository = "https://github.com/shssoichiro/avsser"
version = "0.8.0"

[dependencies]
getopts = "0.2"
lazy_static = "1.0.0"
regex = "1.0"
uuid = "0.6.0"

