[package]
authors = ["Joshua Holmer <jholmer.in@gmail.com>"]
description = "A utility for generating AviSynth scripts"
documentation = "https://github.com/shssoichiro/avsser"
homepage = "https://github.com/shssoichiro/avsser"
license = "MIT"
name = "avsser"
readme = "README.md"
repository = "https://github.com/shssoichiro/avsser"
version = "0.9.0"
edition = "2018"

[dependencies]
clap = "2.32.0"
lazy_static = "1.0.0"
regex = "1.0"
uuid = "0.7.0"

